# iceoryx

iceoryx_examples/stringref/: CMakeLists.txt  build.sh  char_array.hpp  storage.hpp  stringref.hpp  stringref_main.cpp
iceoryx_utils/include/iceoryx_utils/cxx/: string.hpp
